--- a/demos/demo04.html
+++ b/demos/demo04.html
@@ -20,7 +20,7 @@ function pageInit()
 		pidgin:{name:'Pidgin',width:22,height:25,line:8,list:{smile:'微笑',cute:'可爱',wink:'眨眼',laugh:'大笑',victory:'胜利',sad:'伤心',cry:'哭泣',angry:'生气',shout:'大骂',curse:'诅咒',devil:'魔鬼',blush:'害羞',tongue:'吐舌头',envy:'羡慕',cool:'耍酷',kiss:'吻',shocked:'惊讶',sweat:'汗',sick:'生病',bye:'再见',tired:'累',sleepy:'睡了',question:'疑问',rose:'玫瑰',gift:'礼物',coffee:'咖啡',music:'音乐',soccer:'足球',good:'赞同',bad:'反对',love:'心',brokenheart:'伤心'}},
 		ipb:{name:'IPB',width:20,height:25,line:8,list:{smile:'微笑',joyful:'开心',laugh:'笑',biglaugh:'大笑',w00t:'欢呼',wub:'欢喜',depres:'沮丧',sad:'悲伤',cry:'哭泣',angry:'生气',devil:'魔鬼',blush:'脸红',kiss:'吻',surprised:'惊讶',wondering:'疑惑',unsure:'不确定',tongue:'吐舌头',cool:'耍酷',blink:'眨眼',whistling:'吹口哨',glare:'轻视',pinch:'捏',sideways:'侧身',sleep:'睡了',sick:'生病',ninja:'忍者',bandit:'强盗',police:'警察',angel:'天使',magician:'魔法师',alien:'外星人',heart:'心动'}}
 	};
-	$('#elm5').xheditor({tools:'full',skin:'default',width:800,height:200,clickCancelDialog:false,fullscreen:false,layerShadow:3,linkTag:false,cleanPaste:0,defLinkText:'默认超链接文字',sourceMode:false,showBlocktag:true,forcePtag:false,internalScript:true,inlineScript:true,internalStyle:true,inlineStyle:true,hoverExecDelay:-1,loadCSS:'http://xheditor.com/css/global.css',emots:emots});
+	$('#elm5').xheditor({tools:'full',skin:'default',width:800,height:200,clickCancelDialog:false,fullscreen:false,layerShadow:3,linkTag:false,cleanPaste:0,defLinkText:'默认超链接文字',sourceMode:false,showBlocktag:true,forcePtag:false,internalScript:true,inlineScript:true,internalStyle:true,inlineStyle:true,hoverExecDelay:-1,loadCSS:'http://xheditor.com/css/common.css',emots:emots});
 }
 function submitForm(){$('#frmDemo').submit();}
 </script>
