--- a/demos/googlemap/googlemap.html
+++ b/demos/googlemap/googlemap.html
@@ -9,6 +9,7 @@
 body{margin:0;padding:10px;font-size:12px;}
 input{border:1px solid #ABADB3;}
 button{border:1px solid #888;border-color:#fff #888 #888 #fff;}
+input,button{border-radius:3px;-moz-border-radius:3px;-webkit-border-radius:3px;}
 #mapArea{width:512px; height:320px;border:1px #999 solid;text-align:center;margin-top:10px}
 -->
 </style>
