--- a/demos/demo09.html
+++ b/demos/demo09.html
@@ -31,10 +31,12 @@ function pageInit()
 		}},
 		test2:{c:'testClassName',t:'测试2：普通对话框 (Ctrl+2)',s:'ctrl+2',h:1,e:function(){
 			var _this=this;
-			var jTest=$('<div>测试showDialog</div><div style="text-align:right;"><input type="button" id="xheSave" value="确定" /></div>');
-			var jSave=$('#xheSave',jTest);
+			var jTest=$('<div>测试showDialog</div><div><label for="xheImgUrl">图片文件: </label><input type="text" id="xheImgUrl" value="http://" class="xheText" /></div><div style="text-align:right;"><input type="button" id="xheSave" value="确定" /></div>');
+			var jUrl=$('#xheImgUrl',jTest),jSave=$('#xheSave',jTest);
+			_this.uploadInit(jUrl,'upload.php','jpg,gif,png');
 			jSave.click(function(){
-				_this.pasteHTML('点击了确定按钮');
+				_this.loadBookmark();
+				_this.pasteHTML(jUrl.val());
 				_this.hidePanel();
 				return false;	
 			});
